--- a/Base/app/build.gradle
+++ b/Base/app/build.gradle
@@ -20,6 +20,11 @@ android {
             enabled true
         }
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -27,16 +32,21 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    api 'io.reactivex:rxjava:1.1.0'
-    api 'io.reactivex:rxandroid:1.1.0'
+
+    api 'io.reactivex.rxjava3:rxjava:3.0.7'
+    api 'io.reactivex.rxjava3:rxandroid:3.0.0'
+
     api 'de.greenrobot:eventbus:3.0.0-beta1'
     implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
-    implementation 'com.squareup.okhttp3:okhttp:3.7.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.7.0'
+    implementation("com.squareup.okhttp3:okhttp:4.9.0")
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
     implementation 'com.squareup.retrofit2:retrofit:2.1.0'
+
     api 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
     api 'io.reactivex:rxjava:1.1.0'
     api 'io.reactivex:rxandroid:1.1.0'
