--- a/Base/app/build.gradle
+++ b/Base/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "30.0.0"
     defaultConfig {
         applicationId "com.example.basedemo"
-        minSdkVersion 15
+        minSdkVersion 19
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -38,8 +38,7 @@ dependencies {
 
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
-    api 'io.reactivex.rxjava3:rxjava:3.0.7'
-    api 'io.reactivex.rxjava3:rxandroid:3.0.0'
+
 
     api 'de.greenrobot:eventbus:3.0.0-beta1'
     implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
@@ -47,7 +46,20 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
     implementation 'com.squareup.retrofit2:retrofit:2.1.0'
 
-    api 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
-    api 'io.reactivex:rxjava:1.1.0'
+    api 'com.squareup.retrofit2:adapter-rxjava:2.9.0'
+    api 'io.reactivex:rxjava:1.3.3'
     api 'io.reactivex:rxandroid:1.1.0'
+
+    implementation 'com.github.LuckSiege.PictureSelector:picture_library:v2.5.9'
+    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'//相册
+
+    api 'com.gcssloop.widget:rclayout:1.8.1'
+
+    api 'com.github.bumptech.glide:glide:4.11.0'                   //图片加载
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.3.1'
+
+    implementation  'com.scwang.smart:refresh-layout-kernel:2.0.1'//刷新控件
+    implementation  'com.scwang.smart:refresh-header-classics:2.0.1'//经典刷新头
+    implementation  'com.scwang.smart:refresh-footer-classics:2.0.1'    //经典加载
+
 }
